--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
+
 </head>
 
 <body id="page-top" class="index">
@@ -290,6 +295,13 @@
       ga('create', 'UA-64514560-1', 'auto');
       ga('send', 'pageview');
 
+    </script>
+
+    <!-- Sharing code -->
+    <script type="text/javascript">stLight.options({publisher: "63eed25c-7633-4e13-810a-a849114a6b6a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    <script>
+      var options={ "publisher": "63eed25c-7633-4e13-810a-a849114a6b6a", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "reddit", "googleplus", "linkedin", "email", "sharethis"]}};
+      var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
     </script>
 
 </body>
