--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-
-    <script type="text/javascript">var switchTo5x=true;</script>
-    <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
+  <meta proerty="og:title" content="My Startup - Project Zero">
+  <meta proerty="og:type" content="website">
+  <meta proerty="og:url" content="http://www.zStartup.herokuapp.com/index.html">
+  <meta proerty="og:image" content="http://www.zStartup/herokuapp.com/img/header-bg.jpg">
+  <meta proerty="og:description" content="Lorem ipsum">
+  <meta proerty="og:site_name" content="My Startup">
 
 </head>
 
@@ -285,6 +287,10 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
